Button cursor property changed

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             color: #fff;
             border:none;
             transition: 1s ease;
+            cursor: pointer;
         } 
         #roll {
             background: rgb(35, 144, 247);
